Updated to new Repo

--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ minecraft {
 repositories {
     maven {
         name "Hexeption Mod Repo"
-        url "https://repo.hexeption.co.uk/artifactory/hex-mods/"
+        url "https://repo.hexeption.dev/repository/hex-mods/"
     }
 }
 
@@ -29,7 +29,7 @@ dependencies {
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
     modCompile "io.github.prospector:modmenu:${project.mod_menu_version}"
-    modCompile "uk.co.hexeption:DevWorld_1.15:1.15.2+1.0.0+build.8"
+    modCompile "uk.co.hexeption:DevWorld_1.15:1.15.2+1.0.0+build.9"
 
     modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 }
@@ -86,9 +86,9 @@ publishing {
         // mavenLocal()
         if (project.hasProperty("mavenPass")) {
             maven {
-                url = "https://repo.hexeption.co.uk/artifactory/hex-mods/"
+                url = "https://repo.hexeption.dev/repository/hex-mods/"
                 credentials {
-                    username = "Admin"
+                    username = "admin"
                     password = project.getProperty("mavenPass")
                 }
             }
