--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.15.2
-yarn_mappings=1.15.2+build.15
-loader_version=0.8.2+build.194
+minecraft_version=20w20b
+yarn_mappings=20w20b+build.7
+loader_version=0.8.3+build.196
 # Mod Properties
-mod_version=1.15.2+1.0.0
+mod_version=20w20b+1.0.0
 maven_group=dev.hexeption
 archives_base_name=lightblock
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.10.7+build.309-1.15
-mod_menu_version=1.10.2+build.32
+fabric_version=0.10.9+build.346-1.16
+mod_menu_version=1.11.5+build.10
