--- a/build.gradle
+++ b/build.gradle
@@ -104,7 +104,7 @@ curseforge {
         id = '383801'
         changelog = 'A changelog can be found at https://github.com/Hexeption/LightBlock'
         releaseType = 'beta'
-        addGameVersion '1.15'
+        addGameVersion '1.16-Snapshot'
         mainArtifact(remapJar) {
             displayName = "LightBlock v$version for $project.minecraft_version"
         }
