--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=20w20b
-yarn_mappings=20w20b+build.7
-loader_version=0.8.3+build.196
+minecraft_version=20w21a
+yarn_mappings=20w21a+build.9
+loader_version=0.8.4+build.198
 # Mod Properties
-mod_version=20w20b+1.0.0
+mod_version=20w21a+1.0.0
 maven_group=dev.hexeption
 archives_base_name=lightblock
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.10.9+build.346-1.16
-mod_menu_version=1.11.5+build.10
+fabric_version=0.10.10+build.347-1.16
+mod_menu_version=1.11.6+build.11
