--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=20w21a
-yarn_mappings=20w21a+build.9
-loader_version=0.8.4+build.198
+minecraft_version=1.16-pre2
+yarn_mappings=1.16-pre2+build.9
+loader_version=0.8.7+build.201
 # Mod Properties
-mod_version=20w21a+1.0.0
+mod_version=1.16-pre2+1.0.1
 maven_group=dev.hexeption
 archives_base_name=lightblock
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.10.10+build.347-1.16
-mod_menu_version=1.11.6+build.11
+fabric_version=0.11.7+build.356-1.16
+mod_menu_version=1.11.8+build.13
