--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.16-pre3
-yarn_mappings=1.16-pre3+build.1
-loader_version=0.8.7+build.201
+minecraft_version=1.16
+yarn_mappings=1.16+build.1
+loader_version=0.8.8+build.202
 # Mod Properties
-mod_version=1.16-pre3+1.0.2
+mod_version=1.16+1.1.0
 maven_group=dev.hexeption
 archives_base_name=lightblock
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.11.8+build.357-1.16
+fabric_version=0.13.1+build.370-1.16
 mod_menu_version=1.11.8+build.13
