--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,7 @@ jar {
 publishing {
     publications {
         mavenJava(MavenPublication) {
+            components.java
             // add all the jars that should be included when publishing to maven
             artifact(remapJar) {
                 builtBy remapJar
