--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.5
+minecraft_version=21w08b
+yarn_mappings=21w08b+build.1
 loader_version=0.11.2
 # Mod Properties
-mod_version=1.16.5+1.3.0
+mod_version=21w08b+1.0.0
 maven_group=dev.hexeption
 archives_base_name=lightblock
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.31.0+1.16
-mod_menu_version=1.14.6+build.31
+fabric_version=0.31.1+1.17
+mod_menu_version=2.0.0-beta.2
