--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'fabric-loom' version '0.4.3'
     id 'maven-publish'
     id 'com.matthewprenger.cursegradle' version "1.1.2"
+    id "com.modrinth.minotaur" version "1.1.0"
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
@@ -116,4 +117,19 @@ curseforge {
     options {
         forgeGradleIntegration = false
     }
+}
+
+import com.modrinth.minotaur.TaskModrinthUpload
+
+task publishModrinth (type: TaskModrinthUpload){
+    if (project.hasProperty('modrinth_api_key')) {
+        token = project.getProperty('modrinth_api_key')
+    }
+    projectId = 'RAYYJHp3'
+    versionName = "LightBlock v$version for $project.minecraft_version"
+    changelog = 'A changelog can be found at https://github.com/Hexeption/LightBlock'
+    versionNumber = "$version"
+    uploadFile = jar
+    addGameVersion("$minecraft_version")
+    addLoader('fabric')
 }
