--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'fabric-loom' version '0.4.3'
     id 'maven-publish'
     id 'com.matthewprenger.cursegradle' version "1.1.2"
+    id "com.modrinth.minotaur" version "1.1.0"
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
